# rust-starter-generate

./: Cargo.toml  LICENSE  README.md  cargo-generate.toml  rustfmt.toml
tests/: test_cli.rs
