[package]
name = "{{project-name}}"
version = "0.0.1"
authors = ["{{authors}}"]
edition = "2018"
repository = ""
readme = "README.md"
license = "MIT"
keywords = [""]
description = """
Your project description.
"""

[workspace]
members = [
    "utils",
    "cli",
    "core",
]

[dependencies]
utils = { path = "utils" }
cli = { path = "cli"}
core = { path = "core" }
human-panic = "1.0.1"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0.1"

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
